<resources>
    <!-- Misc Group -->
    <string name="app_name">Prototyp</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_friends">Your Friends</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <!-- Menu Group -->
    <string name="menu_home">Home</string>
    <string name="menu_bookings">Bookings</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_delivey">Delivery</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_about">About Us</string>
    <string name="menu_privacy">Privacy</string>
    <string name="menu_friends">Your Favourites</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_group_communicate">Communicate</string>
    <string name="menu_group_misc">Miscellaneous</string>
    <string name="title_activity_test"></string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search Location</string>
    <string name="title_activity_accept_booking">Map</string>
    <string name="title_activity_waiting">Map</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_activity_delivery">Delivery</string>
    <string name="title_activity_order">Order</string>
    <string name="title_activity_flight">Flight</string>
    <string name="title_activity_bookings">My Bookings</string>

    <!-- Friends Group -->

    <!-- Bookings part -->
    <string name="booking_popup_message">Would you like to book a flight for yourself or for somebody else?</string>
    <string name="bookingart_popup_message">What?</string>
    <string name="title_activity_Booking">Booking</string>
    <!-- Bookings part -->
    
    <!-- Booking Order Part -->
    <string name="order_from">From:</string>
    <string name="order_to">To:</string>
    <string name="order_ankommen_uhrzeit">Ankommen um:</string>
    <string name="order_price">Price:</string>
    <!-- Booking Order Part -->

    <string-array name="locations">
        <item>My location</item>
    </string-array>

</resources>
